Project

General

Profile

Actions

Bug #54112

closed

segmentation fault in UserAsyncRefreshHandler::init_fetch

Added by Cory Snyder about 2 years ago. Updated about 1 year ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
backport_processed
Backport:
octopus pacific quincy
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We observed a segfault in UserAsyncRefreshHandler::init_fetch on 4 separate nodes. The cluster is running Pacific v16.2.7. The following backtrace was the same on all of them:

 "backtrace": [
        "/lib64/libpthread.so.0(+0x12c20) [0x7fbe9348bc20]",
        "(UserAsyncRefreshHandler::init_fetch()+0x4e) [0x7fbe9e44691e]",
        "(RGWQuotaCache<rgw_user>::async_refresh(rgw_user const&, rgw_bucket const&, RGWQuotaCacheStats&)+0x19f) [0x7fbe9e44ac9f]",
        "(RGWQuotaCache<rgw_user>::get_stats(rgw_user const&, rgw_bucket const&, RGWStorageStats&, optional_yield, DoutPrefixProvider const*)+0x113) [0x7fbe9e44df73]",
        "(RGWQuotaHandlerImpl::check_quota(rgw_user const&, rgw_bucket&, RGWQuotaInfo&, RGWQuotaInfo&, unsigned long, unsigned long, optional_yield)+0x12d) [0x7fbe9e44e72d]",
        "(rgw::sal::RGWRadosBucket::check_quota(RGWQuotaInfo&, RGWQuotaInfo&, unsigned long, optional_yield, bool)+0x45) [0x7fbe9e537a75]",
        "(RGWPutObj::execute(optional_yield)+0x10a6) [0x7fbe9e4196c6]",
        "(rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, optional_yield, bool)+0xb36) [0x7fbe9e09ac26]",
        "(process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSink*, optional_yield, rgw::dmclock::Scheduler*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*, int*)+0x2891) [0x7fbe9e09eac1]",
        "/lib64/libradosgw.so.2(+0x4b2143) [0x7fbe9dfee143]",
        "/lib64/libradosgw.so.2(+0x4b3be4) [0x7fbe9dfefbe4]",
        "/lib64/libradosgw.so.2(+0x4b3e4e) [0x7fbe9dfefe4e]",
        "make_fcontext()" 
    ]

Related issues 4 (0 open4 closed)

Has duplicate rgw - Bug #54774: crash: UserAsyncRefreshHandler::init_fetch()Duplicate

Actions
Copied to rgw - Backport #54493: quincy: segmentation fault in UserAsyncRefreshHandler::init_fetchResolvedCory SnyderActions
Copied to rgw - Backport #54494: pacific: segmentation fault in UserAsyncRefreshHandler::init_fetchResolvedCory SnyderActions
Copied to rgw - Backport #54495: octopus: segmentation fault in UserAsyncRefreshHandler::init_fetchResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 44859
Actions #2

Updated by Casey Bodley about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to octopus pacific quincy
Actions #3

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54493: quincy: segmentation fault in UserAsyncRefreshHandler::init_fetch added
Actions #4

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54494: pacific: segmentation fault in UserAsyncRefreshHandler::init_fetch added
Actions #5

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54495: octopus: segmentation fault in UserAsyncRefreshHandler::init_fetch added
Actions #6

Updated by Casey Bodley about 2 years ago

  • Has duplicate Bug #54774: crash: UserAsyncRefreshHandler::init_fetch() added
Actions #7

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #8

Updated by Konstantin Shalygin about 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF